# web-analyzer-functions

./: Dockerfile  README.md  WebAnalyzer.cabal
src/: Accessibility.hs  ContentToCode.hs  HTMLElement.hs  HTMLReport.hs  Main.hs  MobileFriendly.hs  SEOAnalysis.hs  Scoring.hs
