name:                WebAnalyzer
version:             0.1.0.0
synopsis:            A tool to analyze and score web page structure
description:         Web Structure Analyzer is a Haskell-based tool designed to analyze the structure of HTML pages.
license:             MIT
license-file:        LICENSE
author:              Pedro França
maintainer:          jppfeitosa@gmail.com
category:            Web, Analysis
build-type:          Simple
cabal-version:       >=1.10

executable WebAnalyzer
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       http-conduit,
                       html-conduit,
                       xml-conduit,
                       aeson,
                       text,
                       optparse-applicative
  default-language:    Haskell2010
